fix recipe-service response and request

--- a/backend/recipe-service/.env.example
+++ b/backend/recipe-service/.env.example
@@ -3,7 +3,7 @@ PORT=8082
 DEBUG=True
 
 # Cấu hình Database
-MONGO_URI=mongodb://localhost:27017/cookpad_recipe_db
+MONGO_URI=mongodb://root:root@localhost:27017/cookpad_recipe_db?authSource=admin
 
 # Secret Key (Dùng để decode token nếu cần, giá trị bất kỳ vì verify_signature=False)
 SECRET_KEY=change_this_to_random_secret
