--- a/backend/authentication-service/.env.example
+++ b/backend/authentication-service/.env.example
@@ -5,3 +5,8 @@ JWT_ACCESS_TOKEN_DURATION=1000
 JWT_REFRESH_TOKEN_DURATION=30000
 PROFILE_SERVICE_URL=http://localhost:8081/users
 SECRET_KEY=dev-secret-key-change-in-production
+
+# Google OAuth Configuration
+GOOGLE_CLIENT_ID=key
+GOOGLE_CLIENT_SECRET=key
+GOOGLE_REDIRECT_URI=http://localhost:3000/callback
