--- a/backend/authentication-service/requirements.txt
+++ b/backend/authentication-service/requirements.txt
@@ -8,3 +8,6 @@ PyJWT==2.8.0
 python-dotenv==1.0.0
 requests==2.31.0
 email-validator==2.1.0
+google-auth==2.25.2
+google-auth-oauthlib==1.2.0
+google-auth-httplib2==0.2.0
