AI and Health service

--- a/backend/media-service/.env.example
+++ b/backend/media-service/.env.example
@@ -4,7 +4,7 @@
 # Flask configuration
 FLASK_DEBUG=false
 SECRET_KEY=change-this-to-a-random-secret-key-in-production
-
+Skip_AUTH=True
 # MongoDB configuration (optional - can override application.yaml)
 # MONGO_URI=mongodb://root:root@localhost:27017/file-service?authSource=admin
 
