--- a/backend/recipe-service/.env.example
+++ b/backend/recipe-service/.env.example
@@ -10,7 +10,7 @@ SECRET_KEY=change_this_to_random_secret
 
 # Chế độ bỏ qua Auth để test (True/False)
 # Đặt True nếu muốn test API mà không cần token
-SKIP_AUTH=False
+SKIP_AUTH=True
 
 # URL của các service khác (để gọi chéo)
 USER_SERVICE_URL=http://localhost:8081/users
