AI and health service

--- a/backend/ai-service/.env.example
+++ b/backend/ai-service/.env.example
@@ -1,9 +1,9 @@
 PORT=8092
-MONGO_URI=mongodb://root:root@localhost:27017/cookpad_ai_db?authSource=admin
+MONGO_URI=mongodb://localhost:27017/cookpad_ai_db
 SECRET_KEY=your_secret_key_here
 
 # API Keys (Quan trọng)
-GEMINI_API_KEY=your_gemini_api_key
+GROQ_API_KEY=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
 LLAMA_CLOUD_API_KEY=your_llama_cloud_api_key
 
 # Service URLs
