--- a/backend/ai-service/requirements.txt
+++ b/backend/ai-service/requirements.txt
@@ -1,9 +1,9 @@
-Flask==3.0.0
-flask-cors==4.0.0
-mongoengine==0.27.0
-python-dotenv==1.0.0
-PyJWT==2.8.0
-pymongo==4.3.3
-requests==2.31.0
-google-generativeai==0.3.2
-Pillow==10.2.0
+Flask  # Bỏ ==3.0.0 để lấy bản mới nhất
+flask-cors
+python-dotenv
+PyJWT
+pymongo>=4.8.0  # Phải dùng bản mới mới hỗ trợ Python 3.12/3.13
+requests
+groq
+Pillow
+# Đã xóa mongoengine vì code mình viết không dùng nó
