--- a/backend/health-service/.env.example
+++ b/backend/health-service/.env.example
@@ -1,5 +1,5 @@
 PORT=8091
-MONGO_URI=mongodb://root:root@localhost:27017/cookpad_health_db?authSource=admin
+MONGO_URI=mongodb://localhost:27017/cookpad_health_db
 SECRET_KEY=your_secret_key_here
 DEBUG=True
 SKIP_AUTH=True
