AI and health service update

--- a/backend/ai-service/.env.example
+++ b/backend/ai-service/.env.example
@@ -3,7 +3,7 @@ MONGO_URI=mongodb://localhost:27017/cookpad_ai_db
 SECRET_KEY=your_secret_key_here
 
 # API Keys (Quan trọng)
-GROQ_API_KEY=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
+GROQ_API_KEY= your_groq_api_key
 LLAMA_CLOUD_API_KEY=your_llama_cloud_api_key
 
 # Service URLs
