Health and Ai service update to work with media service

--- a/backend/ai-service/.env
+++ b/backend/ai-service/.env
@@ -1,16 +1,15 @@
 PORT=8092
-MONGO_URI=mongodb://root:root@localhost:27017/cookpad_ai_db?authSource=admin
+MONGO_URI=mongodb://localhost:27017/cookpad_ai_db
 SECRET_KEY=your_secret_key_here
 
 # API Keys (Quan trọng)
-GEMINI_API_KEY=AIzaSyAkzTL4ECvnEYxwmKIgXhSMvq2ICh7rHqY
-LLAMA_CLOUD_API_KEY=llx-qkytGF5OE85q60hpCQqtqlFx1OXo4sDbcvdKJcXF9VMT8WLW
+GROQ_API_KEY=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
+LLAMA_CLOUD_API_KEY=llx-7jHtCdJhlDXh3RHgDp31LQBF1dfclapSxBrsLey7eMHlDB9y
 
 # Service URLs
-HEALTH_SERVICE_URL=http://localhost:8091/health
-RECIPE_SERVICE_URL=http://localhost:8082/recipes
-MEDIA_SERVICE_URL=http://localhost:8090/media
-
+HEALTH_SERVICE_URL=http://127.0.0.1:8091
+RECIPE_SERVICE_URL=http://127.0.0.1:8082
+MEDIA_SERVICE_URL=http://127.0.0.1:8090
 # Config
 SKIP_AUTH=True
 DEBUG=True
