--- a/backend/health-service/.env
+++ b/backend/health-service/.env
@@ -1,8 +1,8 @@
 PORT=8091
-MONGO_URI=mongodb://root:root@localhost:27017/cookpad_health_db?authSource=admin
+MONGO_URI= mongodb://localhost:27017/health_db
 SECRET_KEY=your_secret_key_here
 DEBUG=True
 SKIP_AUTH=True
 # Có thể thêm config cho AI Service nếu cần trigger
-AI_SERVICE_URL=http://localhost:8092/ai
+AI_SERVICE_URL=http://localhost:8092
 MEDIA_SERVICE_URL=http://localhost:8090/media
