--- a/backend/ai-service/.env.example
+++ b/backend/ai-service/.env.example
@@ -1,10 +1,10 @@
 PORT=8092
-MONGO_URI=mongodb://root:root@localhost:27017/cookpad_ai_db?authSource=admin
+MONGO_URI=mongodb://localhost:27017/cookpad_ai_db
 SECRET_KEY=your_secret_key_here
 
 # API Keys (Quan trọng)
-GEMINI_API_KEY=AIzaSyAkzTL4ECvnEYxwmKIgXhSMvq2ICh7rHqY
-LLAMA_CLOUD_API_KEY=llx-qkytGF5OE85q60hpCQqtqlFx1OXo4sDbcvdKJcXF9VMT8WLW
+GROQ_API_KEY= your_groq_api_key
+LLAMA_CLOUD_API_KEY=your_llama_cloud_api_key
 
 # Service URLs
 HEALTH_SERVICE_URL=http://localhost:8091/health
