Update service URLs

--- a/backend/ai-service/.env.example
+++ b/backend/ai-service/.env.example
@@ -7,9 +7,9 @@ GROQ_API_KEY= your_groq_api_key
 LLAMA_CLOUD_API_KEY=your_llama_cloud_api_key
 
 # Service URLs
-HEALTH_SERVICE_URL=http://localhost:8091/health
-RECIPE_SERVICE_URL=http://localhost:8082/recipes
-MEDIA_SERVICE_URL=http://localhost:8090/media
+HEALTH_SERVICE_URL=http://127.0.0.1:8091
+RECIPE_SERVICE_URL=http://127.0.0.1:8082
+MEDIA_SERVICE_URL=http://127.0.0.1:8090
 
 # Config
 SKIP_AUTH=True
