--- a/backend/health-service/.env
+++ b/backend/health-service/.env
@@ -2,7 +2,7 @@ PORT=8091
 MONGO_URI= mongodb://localhost:27017/health_db
 SECRET_KEY=your_secret_key_here
 DEBUG=True
-SKIP_AUTH=True
+SKIP_AUTH=False
 # Có thể thêm config cho AI Service nếu cần trigger
 AI_SERVICE_URL=http://localhost:8092
 MEDIA_SERVICE_URL=http://localhost:8090/media
